--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,11 @@
 
 @layer components {
   .button-solid {
-    @apply bg-blueMarguerite rounded-2xl p-3 px-6 hover:bg-hoverPurple active:bg-clickPurple;
+    @apply p-3 px-6 bg-blueMarguerite rounded-2xl hover:bg-hoverPurple active:bg-clickPurple;
+  }
+
+  .button-normal {
+    @apply px-4 py-2 rounded-lg bg-lightPurple text-blueMarguerite;
   }
 
   .button-expand {
@@ -14,11 +18,10 @@
   }
 
   .border-class {
-    @apply border-2 border-solid w-1/2 border-lightGray py-2 px-4 rounded-2xl
-        focus-within:border-midBlack;
+    @apply px-4 py-2 border-2 border-solid border-lightGray rounded-2xl focus-within:border-midBlack;
   }
 
   .heading-1 {
-    @apply text-midBlack font-bold text-xl;
+    @apply text-xl font-bold text-midBlack;
   }
 }
